sec dashboard complete

--- a/client/src/pages/secretary/style/regApprove.css
+++ b/client/src/pages/secretary/style/regApprove.css
@@ -1,4 +1,13 @@
 
+.main {
+  overflow-y: auto;
+  display: block;
+  width: auto;
+ 
+  background-color: rgb(255, 255, 255);
+  overflow-y: hidden;
+}
+
 .title {
   display: flex;
   align-content: center;
