course Section update
course Enrollment/course Reviews and Course View

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -74,7 +74,7 @@
     height: 10%;
     position: fixed;
     width: 100%;
-    background-color: rgb(6, 10, 95);
+    background-color: #060a5f;
     position: absolute;
 }
 
