--- a/client/src/pages/professional/style/cpd.css
+++ b/client/src/pages/professional/style/cpd.css
@@ -1,10 +1,14 @@
-.title {
-    display: flex;
+.cpd {
+  width: 500px;
+  height: 500px;
+  border: 1px solid rgb(0, 0, 0);
+
+    display: block;
     align-content: center;
     justify-content: center;
+    align-items: center;
   }
-  .title h1 {
-    margin-top: 150px;
+  .cpd h1 {
     justify-content: center;
   }
   
