--- a/client/src/pages/secretary/style/regApprove.css
+++ b/client/src/pages/secretary/style/regApprove.css
@@ -1,4 +1,3 @@
-
 .main {
   overflow-y: auto;
   display: block;
@@ -7,13 +6,33 @@
   background-color: rgb(255, 255, 255);
   overflow-y: hidden;
 }
-
-.title {
-  display: flex;
+.mainCourses {
+  padding-top: 20px;
   align-content: center;
   justify-content: center;
+  height: 500px;
+  display: block;
+  overflow-y: scroll;
 }
-.title h1 {
-  margin-top: 150px;
+.table{
+  height: 120px;
+  padding: 10px;
+  width: 88%;
+  margin: 5px;
+  border-radius: 10px;
+  float: right;
+}
+
+.progress {
+  margin: 10px;
+  padding: 5px;
+  border: 2px solid rgb(6, 10, 95);
+  border-radius: 15px;
+  height: 50px;
   justify-content: center;
+  align-items: center;
+  display: flex;
+  grid-area: progress;
+  padding: 5px;
+  background-color: rgb(255, 255, 255);
 }
