workshop section -Professional

--- a/client/src/pages/secretary/style/regApprove.css
+++ b/client/src/pages/secretary/style/regApprove.css
@@ -6,7 +6,7 @@
   background-color: rgb(255, 255, 255);
   overflow-y: hidden;
 }
-.mainCourses {
+.regApprove {
   padding-top: 20px;
   align-content: center;
   justify-content: center;
