--- a/client/src/pages/professional/style/workshop.css
+++ b/client/src/pages/professional/style/workshop.css
@@ -34,7 +34,7 @@
   .search {
     width: 100%;
   }
-  .search input {
+  .searchWork input {
     width: 300px;
     height: 35px;
     margin-top: 80px;
