--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -124,6 +124,7 @@
     left: 0;
     width: 20%;
     transition: 350ms;
+    z-index: 1;
 }
 
 .nav-text {
@@ -171,4 +172,52 @@ align-items: center;
 
 span {
     margin-left: 16px;
+}
+
+
+.progress {
+    margin: 10px;
+    padding: 5px;
+    border: 2px solid rgb(6, 10, 95);
+    border-radius: 15px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  grid-area: progress;
+  padding: 5px;
+  background-color: rgb(255, 255, 255);
+}
+.progressBar {
+    display: block;
+  width: 60%;
+  justify-content: center;
+  border-radius: 15px;
+  overflow: visible;
+  border: 1px solid rgb(6, 10, 95);
+  float: top;
+}
+.progressColour {
+  height: 10px;
+  width: 75%;
+  background-color: rgb(6, 10, 95);
+  border-radius: 15px;
+  animation: animate-positive 2s;
+}
+.progressValue {
+  width: 65px;
+  height: 25px;
+  font-size: 20px;
+  font-weight: 1000;
+  color: rgb(6, 10, 95);
+  align-content: center;
+  border-radius: 15px;
+  border-top: 0px;
+  position: absolute;
+  bottom: -5px;
+  right: -70px;
+}
+
+.progress h3{
+    margin-left: 25px;
 }
