--- a/client/src/pages/council/style/dashboard.css
+++ b/client/src/pages/council/style/dashboard.css
@@ -51,6 +51,7 @@
   display: flex;
   width: 49.5%;
   height: 100%;
+ 
   float: left;
   border: 2px solid rgb(6, 10, 95);
   border-radius: 15px;
@@ -62,9 +63,10 @@
   border-radius: 15px;
   padding: 5px;
 
-  display: flex;
+  display:inline-flex;
   height: 100%;
   width: 49.5%;
+  
   float: right;
   border: 2px solid rgb(6, 10, 95);
   background-color: rgb(255, 255, 255);
