--- a/client/src/pages/professional/style/cpd.css
+++ b/client/src/pages/professional/style/cpd.css
@@ -6,7 +6,7 @@
     height: 300px;
     justify-content: center;
     align-items: flex-start;
-    display: flex;
+    display: block;
     background-color: rgb(255, 255, 255);
     overflow-y: auto;
   }
@@ -14,6 +14,10 @@
   .recentRec{
     padding: 10px;
     width: 1000px;
+  }
+
+  .recList{
+    margin: 10px;
   }
 
   .recType{
@@ -49,7 +53,7 @@
     
   }
 
-  .recPending{
+  .recPending[data-status="Pending"]{
     margin-left: auto;
     padding: 5px;
     border-radius: 8px 8px 8px 8px;
@@ -58,6 +62,29 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    background-color: rgb(202, 247, 3);
+    background-color: rgb(255, 231, 11);
   }
   
+  .recPending[data-status="Approved"]{
+    margin-left: auto;
+    padding: 5px;
+    border-radius: 8px 8px 8px 8px;
+    height: inherit;
+    width:100px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: rgb(3, 247, 15);
+  }
+
+  .recPending[data-status="Rejected"]{
+    margin-left: auto;
+    padding: 5px;
+    border-radius: 8px 8px 8px 8px;
+    height: inherit;
+    width:100px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: rgb(255, 4, 4);
+  }
