--- a/client/src/pages/professional/style/cpd.css
+++ b/client/src/pages/professional/style/cpd.css
@@ -1,6 +1,6 @@
-  .recentCPD{
+  .recentCPDRec{
     margin: 10px;
-    padding: 15px;
+    /*padding: 15px;*/
     border: 2px solid rgb(6, 10, 95);
     border-radius: 15px 0px 0px 15px;
     height: 300px;
@@ -11,8 +11,13 @@
     overflow-y: auto;
   }
 
+  .titleRecent{
+    padding-left: 15px;
+  }
+
+
 .recentRec {
-  padding: 10px;
+  padding: 5px;
   width: 1000px;
 }
 
@@ -54,28 +59,6 @@
 .recPending{
   color: white;
 }
-/*.rejected  .recPending {
-  margin-left: auto;
-  padding: 5px;
-  border-radius: 8px 8px 8px 8px;
-  height: inherit;
-  width: 100px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  background-color: rgb(153, 21, 21);
-}
-.all  .recPending {
-  margin-left: auto;
-  padding: 5px;
-  border-radius: 8px 8px 8px 8px;
-  height: inherit;
-  width: 100px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  background-color: rgb(153, 144, 21);
-}*/
 
 .recPending[data-status="Pending"]{
     margin-left: auto;
