--- a/client/src/pages/professional/style/Ongoingtabs.css
+++ b/client/src/pages/professional/style/Ongoingtabs.css
@@ -15,10 +15,10 @@
   top: 0;
   border: 1px solid white;
   float: top;
-  width: 1100px;
+  width: 90%;
   padding-bottom: 20px;
   z-index: 1;
-  margin-left: 10px;
+  /*margin-left: 10px;*/
 }
 
 .react-tabs__tab {
