New Record Add Button

--- a/client/src/pages/professional/style/courseView.css
+++ b/client/src/pages/professional/style/courseView.css
@@ -86,9 +86,9 @@ padding-left: 75px;
   float: left;
   height: 50px;
 }
-.review {
+/*.review {
 
-}
+}*/
 .left a {
   background: #060a5f;
   border: none;
