--- a/client/src/pages/professional/style/addCPD.css
+++ b/client/src/pages/professional/style/addCPD.css
@@ -25,7 +25,7 @@
   font-weight: 200;
 }
 
-.select ,.input{
+select ,input{
   margin-bottom: 15px;
   margin-left: 40px;
   width: 70%;
@@ -58,7 +58,7 @@ margin-bottom: 20px;}
   }
   .review {
   }
-  .left a {
+  .bottom a {
     background: #060a5f;
     border: none;
     font-weight: 600;
