--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -53,6 +53,7 @@ body {
   padding-left: 20px;
   font-size: 15px;
   border: 1px solid #d4d3d3;
+  margin-left: 0;
 }
 .user :focus {
   border-bottom-style: 1px solid #1e1192;
