--- a/client/src/pages/professional/style/dashboard.css
+++ b/client/src/pages/professional/style/dashboard.css
@@ -6,6 +6,12 @@
   background-color: rgb(255, 255, 255);
   overflow-y: scroll;
 }
+
+.recent p{
+  padding-left:10px;
+  padding-top: 3px;
+}
+
 .bar {
   display: flex;
   justify-content: center;
@@ -81,10 +87,10 @@
   background-color: rgb(255, 255, 255);
   grid-area: chart1;
 }
-.OnGoing {
-  margin: 10px;
+.chart3 {
+  margin: 1%;
   display: block;
-  height: 100%;
+  height: 35%;
   justify-content: center;
   align-items: center;
   align-content: center;
@@ -92,10 +98,13 @@
   border: 2px solid rgb(6, 10, 95);
   background-color: rgb(255, 255, 255);
 }
-.ONG {
+.ONG2 {
   padding: 5px;
   display: flex;
-  height: 350px;
+  margin: 5px;
+}
+.ONG2 canvas{
+  height: 30%;
 }
 @media only screen and (max-width: 700px) {
   .container {
