--- a/client/src/pages/professional/style/addCPD.css
+++ b/client/src/pages/professional/style/addCPD.css
@@ -24,8 +24,7 @@
   width: 250px;
   font-weight: 200;
 }
-
-select ,input{
+.addCPDMain select , .addCPDMain input{
   margin-bottom: 15px;
   margin-left: 40px;
   width: 70%;
