--- a/client/src/pages/professional/style/job.css
+++ b/client/src/pages/professional/style/job.css
@@ -1,10 +1,98 @@
-.title {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-  }
-  .title h1 {
-    margin-top: 150px;
-    justify-content: center;
-  }
-  
+.titleJob {
+  display: grid;
+  width: auto;
+  height: 720px;
+  background-color: rgb(255, 255, 255);
+  grid-template-columns: 10fr;
+  grid-template-rows: 0.1fr 0.75fr 0.2fr;
+  grid-template-areas:
+    "header"
+    "main"
+    "CV";
+}
+.ViewJob {
+  margin-left: auto;
+  padding: 5px;
+  border-radius: 8px 8px 8px 8px;
+  height: inherit;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background-color: #060a5f;
+  color: rgb(255, 255, 255);
+}
+.ViewJob a {
+  background: #060a5f;
+  border: none;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 10px;
+  float: right;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  color: rgb(255, 255, 255);
+}
+.header {
+  margin: 2%;
+  margin-top: 4.5%;
+  padding-left: 10%;
+  grid-area: header;
+  background-image: linear-gradient(
+    to right,
+    #ffffff,
+    #9ea5e2,
+    #7883e2,
+    #9ea5e2,
+    #ffffff
+  );
+}
+.CV {
+  height: auto;
+  width: 95%;
+  float: left;
+  grid-area: CV;
+}
+.title h1 {
+  margin-top: 150px;
+  justify-content: center;
+  margin-right: 10%;
+  margin-left: 1%;
+}
+.JOB .recentCPDRec {
+  height: 500px;
+  margin-right: 1%;
+  margin-left: 1%;
+}
+.jobview {
+  margin-left: 2%;
+  overflow-y: scroll;
+  grid-area: main;
+}
+.jobAllign {
+  background-image: linear-gradient(to right, #7883e2, #9ea5e2, #ffffff);
+  font-weight: 500;
+  border-radius: 8px 8px 8px 8px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  margin-left: 5%;
+  margin-right: 5%;
+
+  margin-top: 1%;
+}
+
+.cvCreate a {
+  background: #060a5f;
+  border: none;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 10px;
+  float: right;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: 500;
+  color: rgb(255, 255, 255);
+}
