--- a/client/src/pages/professional/style/job.css
+++ b/client/src/pages/professional/style/job.css
@@ -3,12 +3,12 @@
   width: auto;
   height: 720px;
   background-color: rgb(255, 255, 255);
-  grid-template-columns: 10fr;
-  grid-template-rows: 0.1fr 0.75fr 0.2fr;
+  grid-template-columns: 10fr 2fr;
+  grid-template-rows: 0.15fr 0.75fr 0.2fr;
   grid-template-areas:
-    "header"
-    "main"
-    "CV";
+    "header1  header3"
+    "main  main"
+    "CV  CV";
 }
 .ViewJob {
   margin-left: auto;
@@ -34,19 +34,59 @@
   font-weight: 400;
   color: rgb(255, 255, 255);
 }
-.header {
-  margin: 2%;
-  margin-top: 4.5%;
+.header1 {
   padding-left: 10%;
-  grid-area: header;
-  background-image: linear-gradient(
-    to right,
-    #ffffff,
-    #9ea5e2,
-    #7883e2,
-    #9ea5e2,
-    #ffffff
-  );
+  display: grid;
+  margin-top: 7%;
+  grid-area: header1;
+  grid-template-columns: 1fr 1fr 1fr 0.5fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "a b c d";
+}
+
+.header3 {
+  display: grid;
+  padding-left: 10%;
+  margin-top: 15%;
+  grid-area: header3;
+}
+.sort {
+  border-radius: 10px;
+
+  padding: 2%;
+  background: #060a5f;
+  color: white;
+  padding-left: 1%;
+  width: 60%;
+  font-size: 18px;
+  font-weight: 400;
+  grid-area: d;
+}
+.filter1 {
+  grid-area: a;
+  padding-left: 3%;
+  width: 90%;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 10px;
+}
+.filter2 {
+  grid-area: b;
+  border-radius: 10px;
+
+  padding-left: 3%;
+  width: 90%;
+  font-size: 20px;
+  font-weight: 500;
+}
+.filter3 {
+  grid-area: c;
+  border-radius: 10px;
+
+  padding-left: 3%;
+  width: 90%;
+  font-size: 20px;
+  font-weight: 500;
 }
 .CV {
   height: auto;
@@ -67,7 +107,7 @@
 }
 .jobview {
   margin-left: 2%;
- overflow-y: scroll;
+  overflow-y: scroll;
   grid-area: main;
 }
 .jobAllign {
@@ -81,7 +121,7 @@
   margin-right: 5%;
   margin-top: 1%;
 }
-.jobAllign .job{
+.jobAllign .job {
   padding-left: 2%;
 }
 .cvCreate a {
