--- a/client/src/pages/professional/style/blog.css
+++ b/client/src/pages/professional/style/blog.css
@@ -1,9 +1,7 @@
-.title {
-  display: flex;
+.mainBlogs {
   align-content: center;
   justify-content: center;
-}
-.title h1 {
-  margin-top: 150px;
-  justify-content: center;
+  height: 400px;
+  display: block;
+  overflow-y: scroll;
 }
