--- a/client/src/pages/council/style/dashboard.css
+++ b/client/src/pages/council/style/dashboard.css
@@ -48,7 +48,7 @@
 }
 .chart1 {
   padding: 5px;
-  display: flex;
+  display: block;
   width: 49.5%;
   height: 100%;
  
@@ -75,7 +75,7 @@
 .OnGoing {
   margin: 10px;
   display: block;
-  height: 100%;
+  height: 330px;
   justify-content: center;
   align-items: center;
   align-content: center;
