--- a/client/src/pages/professional/style/dashboard.css
+++ b/client/src/pages/professional/style/dashboard.css
@@ -49,7 +49,7 @@
   align-content: center;
   margin: 1%;
 
-  height: 67%;
+  height: 79%;
   float: right;
   border: 2px solid rgb(6, 10, 95);
   background-color: rgb(255, 255, 255);
@@ -60,10 +60,12 @@
 }
 .recentAct .recent {
   margin-top: 3%;
-  border: 1px solid #060a5f;
+  border: 1px solid #e04d4d;
   height: 32px;
+  background-color: rgb(236, 200, 200);
+
   border-radius: 0 20px 20px 0;
-  width: 95%;
+  width: 98%;
 }
 .recentAct {
   border-radius: 15px;
@@ -71,7 +73,7 @@
   align-content: center;
   margin-left: 2%;
   margin-right: 1%;
-  width: 95%;
+  width: 98%;
   height: 100%;
   float: right;
   padding-left: 20px;
@@ -84,7 +86,6 @@
   margin-right: 2%;
   justify-content: center;
   align-items: center;
-  width: 95%;
 
   align-content: center;
   border-radius: 15px;
