--- a/client/src/pages/secretary/style/basicDetails.css
+++ b/client/src/pages/secretary/style/basicDetails.css
@@ -52,10 +52,12 @@
     border: none;
     font-weight: 600;
     text-decoration: none;
-    padding: 5px;
-    float: right;
-    margin: 5px;
+    padding: 8px;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-left: 65%;
     border-radius: 5px;
+    margin-bottom: 10px;
     font-size: 16px;
     color: rgb(255, 255, 255);
   }
