--- a/client/src/pages/csslCourse/courseContentInfo.css
+++ b/client/src/pages/csslCourse/courseContentInfo.css
@@ -76,7 +76,26 @@
     color: rgb(255, 255, 255);
   }
 
-  .content-btn-redirect{
+  .content-btn-redirect-list{
+    position: absolute;
+    top: 18%;
+    right: 5%;
+    background: #0c2dbe;
+    border: none;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 5px;
+    float: right;
+    margin: 5px;
+    border-radius: 5px;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+  }
+
+  .content-btn-redirect-course{
+    position: absolute;
+    top: 18%;
+    right: 15%;
     background: #0cbe38;
     border: none;
     font-weight: 600;
@@ -86,6 +105,10 @@
     margin: 5px;
     border-radius: 5px;
     font-size: 18px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+  }
+
+  .content-btn-redirect-list, .content-btn-redirect-course:hover{
+    cursor: pointer;
   }
 
