--- a/client/src/pages/csslCourse/courseContentInfo.css
+++ b/client/src/pages/csslCourse/courseContentInfo.css
@@ -79,7 +79,7 @@
   .content-btn-redirect-list{
     position: absolute;
     top: 18%;
-    right: 5%;
+    left: 85%;
     background: #0c2dbe;
     border: none;
     font-weight: 600;
@@ -94,8 +94,8 @@
 
   .content-btn-redirect-course{
     position: absolute;
-    top: 18%;
-    right: 15%;
+    top: 25%;
+    left: 85%;
     background: #0cbe38;
     border: none;
     font-weight: 600;
