--- a/client/src/pages/professional/style/addCPD.css
+++ b/client/src/pages/professional/style/addCPD.css
@@ -24,16 +24,28 @@
   width: 250px;
   font-weight: 200;
 }
-.addCPDMain select , .addCPDMain input{
+.addCPDMain input{
   margin-bottom: 15px;
   margin-left: 40px;
-  width: 70%;
+  width: 50%;
   height: 30px;
   font-size: 20px;
   padding-left: 20px;
   color: black;
   
 }
+
+.addCPDMain select{
+  margin-bottom: 15px;
+  margin-left: 40px;
+  width: max-content;
+  height: 30px;
+  font-size: 20px;
+  padding-left: 20px;
+  color: black;
+  
+}
+
 textarea {
     margin-bottom: 15px;
     margin-left: 40px;
