--- a/client/src/pages/csslCourse/lecturerCourseView.css
+++ b/client/src/pages/csslCourse/lecturerCourseView.css
@@ -97,7 +97,7 @@
   background-image: linear-gradient(to right, #7883e2, #9ea5e2, #ffffff);
   font-weight: 500;
   border-radius: 0px 8px 8px 8px;
-  height: 30px;
+  height: auto;
   display: flex;
   align-items: center;
   padding-left: 10px;
