--- a/client/src/components/RichTextEditor.css
+++ b/client/src/components/RichTextEditor.css
@@ -20,5 +20,5 @@
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(0, 0, 0);
   height: 200px;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
